# vector-quantization

./: .gitignore  INSTALLATION.md  LICENSE  MANIFEST.in  PIPELINE_GUIDE.md  README.md  SETUP_GUIDE.md  install_local.py  notebook_example.py  pyproject.toml  quick_test.py  requirements.txt  setup.py  test_autoencoder_fix.py  test_pipeline_config.py  test_vae_fix.py  verify_dimensions.py  verify_vae_dimensions.py
examples/: autoencoder_demo.py  autoencoder_fixed_demo.py  basic_vq_demo.py  pipeline_demo.py  rq_kmeans_demo.py  rqvae_comparison.py  vae_demo.py  vae_fixed_demo.py  vqvae_image_demo.py
pipeline_configs/: README.md  image_vit_rqvae.json  text_bert_vqvae.json  video_3dcnn_rqvae.json
src/vector_quantization/: __init__.py  autoencoder.py  encoders.py  pipeline.py  rq_kmeans.py  rq_vae.py  test_installation.py  vae.py  vector_quantization.py  vq_vae.py
